cmake_minimum_required(VERSION 3.0.2)
project(mujoco_cpp)

## Compile as C++11, supported in ROS Kinetic and newer
# Set C++ standard
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")

# Add USE_DDS option
option(USE_DDS "Enable DDS communication" OFF)
if(USE_DDS)
    add_definitions(-DUSE_DDS)
    message(STATUS "MuJoCo DDS communication enabled")
else()
    message(STATUS "MuJoCo DDS communication disabled (compile with -DUSE_DDS=ON to enable)")
endif()

# Add USE_LEJU_DDS option
option(USE_LEJU_DDS "Enable Leju DDS communication" OFF)
if(USE_LEJU_DDS)
    add_definitions(-DUSE_LEJU_DDS)
    message(STATUS "MuJoCo Leju DDS communication enabled")
else()
    message(STATUS "MuJoCo Leju DDS communication disabled (compile with -DUSE_LEJU_DDS=ON to enable)")
endif()

## Set default cmake build type to release
if(NOT CMAKE_CONFIGURATION_TYPES AND NOT CMAKE_BUILD_TYPE)
        set(CMAKE_BUILD_TYPE Release)
endif()


# set(COMMON_FLAGS " -pthread -Wl,-no-as-needed ")

## Find catkin macros and libraries
## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
## is used, also find other catkin packages

set(LCM_INCLUDE_DIRS "/usr/local/lcm")
set(LCM_LIBRARIES "/usr/local/lib/liblcm.so")

find_package(catkin REQUIRED
        COMPONENTS
        roscpp
        realtime_tools
        std_msgs
        lcm_msg
        geometry_msgs
        nav_msgs
        kuavo_msgs
        kuavo_assets
        )

# find_package(PkgConfig REQUIRED)
# pkg_check_modules(LCM_MSG REQUIRED lcm_msg)

find_package(Threads REQUIRED)
find_library(MUJOCO_LIB mujoco HINTS ${PROJECT_SOURCE_DIR}/lib)
find_package(glfw3 REQUIRED)

find_package(Eigen3 REQUIRED)
find_package(OpenCV REQUIRED)
find_package(yaml-cpp REQUIRED)

# DDS dependencies (conditional)
if(USE_DDS OR USE_LEJU_DDS)
    # Find CyclonDDS-CXX
    find_package(CycloneDDS-CXX REQUIRED)

    # Set up leju IDL files paths (always available in DDS mode)
    set(LEJU_GENERATED_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../kuavo-ros-control-lejulib/hardware_dds_plant/include/leju/idl)

    # leju IDL generated source files (from hardware_dds_plant build)
    set(LEJU_DDS_SOURCES
        ${LEJU_GENERATED_DIR}/JointCmd.cpp
        ${LEJU_GENERATED_DIR}/SensorsData.cpp
        ${LEJU_GENERATED_DIR}/ImuData.cpp
        ${LEJU_GENERATED_DIR}/JointData.cpp
        ${LEJU_GENERATED_DIR}/EndEffectorData.cpp
    )

    # Set up Unitree SDK paths (same as humanoid_controllers)
    set(UNITREE_SDK_INCLUDE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../kuavo-ros-control-lejulib/hardware_dds_plant/include)
    set(UNITREE_SDK_LIB_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../kuavo-ros-control-lejulib/hardware_dds_plant/unitree_sdk2/x86_64)
    set(UNITREE_SDK_LIB_PATH ${UNITREE_SDK_LIB_DIR}/libunitree_sdk2.a)

    if(EXISTS ${UNITREE_SDK_INCLUDE_PATH})
        message(STATUS "Found Unitree SDK include at: ${UNITREE_SDK_INCLUDE_PATH}")
    else()
        message(WARNING "Unitree SDK include not found at: ${UNITREE_SDK_INCLUDE_PATH}")
    endif()

    if(EXISTS ${UNITREE_SDK_LIB_PATH})
        message(STATUS "Found Unitree SDK library at: ${UNITREE_SDK_LIB_PATH}")
    else()
        message(WARNING "Unitree SDK library not found at: ${UNITREE_SDK_LIB_PATH}")
    endif()
endif()



## System dependencies are found with CMake's conventions
# find_package(Boost REQUIRED COMPONENTS system)


## Uncomment this if the package has a setup.py. This macro ensures
## modules and global scripts declared therein get installed
## See http://ros.org/doc/api/catkin/html/user_guide/setup_dot_py.html
# catkin_python_setup()

################################################
## Declare ROS messages, services and actions ##
################################################

## To declare and build messages, services or actions from within this
## package, follow these steps:
## * Let MSG_DEP_SET be the set of packages whose message types you use in
##   your messages/services/actions (e.g. std_msgs, actionlib_msgs, ...).
## * In the file package.xml:
##   * add a build_depend tag for "message_generation"
##   * add a build_depend and a exec_depend tag for each package in MSG_DEP_SET
##   * If MSG_DEP_SET isn't empty the following dependency has been pulled in
##     but can be declared for certainty nonetheless:
##     * add a exec_depend tag for "message_runtime"
## * In this file (CMakeLists.txt):
##   * add "message_generation" and every package in MSG_DEP_SET to
##     find_package(catkin REQUIRED COMPONENTS ...)
##   * add "message_runtime" and every package in MSG_DEP_SET to
##     catkin_package(CATKIN_DEPENDS ...)
##   * uncomment the add_*_files sections below as needed
##     and list every .msg/.srv/.action file to be processed
##   * uncomment the generate_messages entry below
##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)

## Generate messages in the 'msg' folder
# add_message_files(
#   FILES
#   Message1.msg
#   Message2.msg
# )

## Generate services in the 'srv' folder
# add_service_files(
#   FILES
#   Service1.srv
#   Service2.srv
# )

## Generate actions in the 'action' folder
# add_action_files(
#   FILES
#   Action1.action
#   Action2.action
# )

## Generate added messages and services with any dependencies listed here
# generate_messages(
#   DEPENDENCIES
#   std_msgs  # Or other packages containing msgs
# )

################################################
## Declare ROS dynamic reconfigure parameters ##
################################################

## To declare and build dynamic reconfigure parameters within this
## package, follow these steps:
## * In the file package.xml:
##   * add a build_depend and a exec_depend tag for "dynamic_reconfigure"
## * In this file (CMakeLists.txt):
##   * add "dynamic_reconfigure" to
##     find_package(catkin REQUIRED COMPONENTS ...)
##   * uncomment the "generate_dynamic_reconfigure_options" section below
##     and list every .cfg file to be processed

## Generate dynamic reconfigure parameters in the 'cfg' folder
# generate_dynamic_reconfigure_options(
#   cfg/DynReconf1.cfg
#   cfg/DynReconf2.cfg
# )

###################################
## catkin specific configuration ##
###################################
## The catkin_package macro generates cmake config files for your package
## Declare things to be passed to dependent projects
## INCLUDE_DIRS: uncomment this if your package contains header files
## LIBRARIES: libraries you create in this project that dependent projects also need
## CATKIN_DEPENDS: catkin_packages dependent projects also need
## DEPENDS: system dependencies of this project that dependent projects also need
# catkin_package(
# #  INCLUDE_DIRS include
# #  LIBRARIES mujoco
# #  CATKIN_DEPENDS other_catkin_pkg
# #  DEPENDS system_lib
# )
catkin_package(
        INCLUDE_DIRS
                include
        LIBRARIES
                ${PROJECT_NAME}
        CATKIN_DEPENDS
                roscpp
                realtime_tools
                lcm_msg
)
###########
## Build ##
###########

## Specify additional locations of header files
## Your package locations should be listed before other locations
include_directories(
        include
        include/simulate
        ${CMAKE_CURRENT_SOURCE_DIR}/../kuavo-ros-control-lejulib/hardware_node/include
        ${catkin_INCLUDE_DIRS}
        ${glfw3_INCLUDE_DIRS}
        ${LCM_INCLUDE_DIRS}
        ${OpenCV_INCLUDE_DIRS}
)

set(ray_caster_path ${CMAKE_CURRENT_SOURCE_DIR}/utils/cpp_ray_caster)
include_directories(${ray_caster_path})
file(GLOB ray_caster ${ray_caster_path}/*.cpp)

# Add DDS include directories
if(USE_DDS OR USE_LEJU_DDS)
    include_directories(/usr/local/include/ddscxx)
    include_directories(${LEJU_GENERATED_DIR})  # For leju IDL generated headers
    message(STATUS "DDS include directories configured for mujoco")

    # Add Unitree SDK include directory if exists
    if(EXISTS ${UNITREE_SDK_INCLUDE_PATH})
        include_directories(${UNITREE_SDK_INCLUDE_PATH})
    endif()
endif()

link_directories(../lib)


## Declare a C++ library
# add_library(${PROJECT_NAME}
#   src/${PROJECT_NAME}/mujoco.cpp
# )

## Add cmake target dependencies of the library
## as an example, code may need to be generated before libraries
## either from message generation or dynamic reconfigure
# add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})



## Declare a C++ executable
## With catkin_make all packages are built within a single CMake context
## The recommended prefix ensures that target names across packages don't collide

aux_source_directory(./src/simulate SIMULATE_SRCS)
aux_source_directory(./src/lcm_interface LCM_SRCS)

file(GLOB DEXHAND_SOURCES "src/dexhand/*.cpp" "src/dexhand/*.hpp")

# Base library sources
add_library(${PROJECT_NAME} SHARED
    src/mujoco_node.cc
    ${DEXHAND_SOURCES}
    src/joint_address.hpp
    src/dexhand_mujoco_node.cpp
    ${SIMULATE_SRCS} ${LCM_SRCS} ${ray_caster}
)

# Conditionally add DDS sources
if(USE_DDS OR USE_LEJU_DDS)
    target_sources(${PROJECT_NAME} PRIVATE
        src/mujoco_dds.cc
        ${LEJU_DDS_SOURCES}
    )
endif()

# Link libraries (conditionally include DDS)
target_link_libraries(${PROJECT_NAME} PUBLIC
    ${MUJOCO_LIB}
    ${catkin_LIBRARIES}
    Threads::Threads
    glfw
    ${glfw3_LIBRARIES}
    ${LCM_LIBRARIES}
    Eigen3::Eigen 
    ${OpenCV_LIBRARIES}
    yaml-cpp
)

# Add DDS libraries when enabled
if(USE_DDS OR USE_LEJU_DDS)
    target_link_libraries(${PROJECT_NAME} PUBLIC
        CycloneDDS-CXX::ddscxx
        ${UNITREE_SDK_LIB_PATH}
    )
endif()

add_executable(${PROJECT_NAME}_simulate src/main.cc)
target_link_libraries(${PROJECT_NAME}_simulate ${PROJECT_NAME}) 

# nodelet

add_library(nodelet_mujoco SHARED
  src/mujoco_nodelet.cc
)
set_target_properties(nodelet_mujoco PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CATKIN_DEVEL_PREFIX}/lib)

add_dependencies(nodelet_mujoco ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
target_link_libraries(nodelet_mujoco
  ${catkin_LIBRARIES}
  ${PROJECT_NAME}
)

install(TARGETS nodelet_mujoco
  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
)

## Rename C++ executable without prefix
## The above recommended prefix causes long target names, the following renames the
## target back to the shorter version for ease of user use
## e.g. "rosrun someones_pkg node" instead of "rosrun someones_pkg someones_pkg_node"
# set_target_properties(${PROJECT_NAME}_node PROPERTIES OUTPUT_NAME node PREFIX "")

## Add cmake target dependencies of the executable
## same as for the library above
# add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})

## Specify libraries to link a library or executable target against
# target_compile_options(${PROJECT_NAME}_simulate PRIVATE ${COMMON_FLAGS})
# target_link_options(${PROJECT_NAME}_simulate PRIVATE ${COMMON_FLAGS})

# target_link_libraries(
#         ${PROJECT_NAME}_simulate
#         ${MUJOCO_LIB}
#         ${catkin_LIBRARIES}
#         Threads::Threads
#         glfw
#         ${glfw3_LIBRARIES}
#         ${LCM_LIBRARIES}
# )

#############
## Install ##
#############

# all install targets should use catkin DESTINATION variables
# See http://ros.org/doc/api/catkin/html/adv_user_guide/variables.html

## Mark executable scripts (Python etc.) for installation
## in contrast to setup.py, you can choose the destination
# catkin_install_python(PROGRAMS
#   scripts/my_python_script
#   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
# )

## Mark executables for installation
## See http://docs.ros.org/melodic/api/catkin/html/howto/format1/building_executables.html
# install(TARGETS ${PROJECT_NAME}_node
#   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
# )

## Mark libraries for installation
## See http://docs.ros.org/melodic/api/catkin/html/howto/format1/building_libraries.html
# install(TARGETS ${PROJECT_NAME}
#   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
#   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
#   RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}
# )

## Mark cpp header files for installation
# install(DIRECTORY include/${PROJECT_NAME}/
#   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
#   FILES_MATCHING PATTERN "*.h"
#   PATTERN ".svn" EXCLUDE
# )

## Mark other files for installation (e.g. launch and bag files, etc.)
# install(FILES
#   # myfile1
#   # myfile2
#   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
# )

# Mark executables and/or libraries for installation
install(TARGETS ${PROJECT_NAME}_simulate
        ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
        LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
        RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
        )

# Mark cpp header files for installation
install(DIRECTORY include/${PROJECT_NAME}/
        DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
        FILES_MATCHING PATTERN "*.h"
        )


#############
## Testing ##
#############

## Add gtest based cpp test target and link libraries
# catkin_add_gtest(${PROJECT_NAME}-test test/test_mujoco.cpp)
# if(TARGET ${PROJECT_NAME}-test)
#   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
# endif()

## Add folders to be run by python nosetests
# catkin_add_nosetests(test)
