<?xml version="1.0"?>
<package format="2">
  <name>motioncapture</name>
  <version>0.0.1</version>
  <description>
    ROS wrapper for the motioncapture project
  </description>

  <maintainer email="zhanglongbo@lejurobot.com">YourName</maintainer>
  <license>BSD</license>

  <!-- 声明构建工具依赖 -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- 声明构建时依赖 -->
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- 声明运行时依赖 -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>tf2_ros</depend>

  <export>
    <!-- 其他信息可以在这里添加 -->
  </export>
</package>
