<?xml version="1.0"?>
<package format="2">
  <name>full_body_demo</name>
  <version>0.0.1</version>
  <description>Full body demo package for timed action execution</description>
  <maintainer email="maintainer@example.com">Maintainer Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
</package> 
