<package format="2">
  <name>gazebo_sim</name>
  <version>0.0.0</version>
  <description>The sensor_data_publisher package</description>

  <maintainer email="fandes@example.com">User</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>kuavo_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>kuavo_msgs</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>rospy</exec_depend>
  <depend>nodelet</depend>
  <depend>gazebo_dev</depend>
  <depend>gazebo_ros_control</depend>
  <depend>gazebo_ros</depend>
  <depend>controller_manager</depend>
  <depend>realsense_ros_gazebo</depend>
  <depend>humanoid_controllers</depend>
  

  <export>
    <!-- Other tools can request additional information be placed here -->
    <nodelet plugin="${prefix}/plugins/nodelet_gazebo_plugin.xml" />

  </export>
</package>
