<?xml version="1.0"?>
<package format="2">
    <name>humanoid_common</name>
    <version>0.0.0</version>
    <description>The humanoid_common package</description>

    <maintainer email="contact@bridgedp.com">bridgedp</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_clang_tools</build_depend>
    <depend>roscpp</depend>
    <depend>hardware_interface</depend>
    <depend>humanoid_interface_drake</depend>
    <depend>kuavo_common</depend>
    <depend>ocs2_core</depend>
    <depend>ocs2_oc</depend>
    <depend>ocs2_ddp</depend>
    <depend>ocs2_mpc</depend>
    <depend>ocs2_sqp</depend>
    <depend>ocs2_ipm</depend>
    <depend>ocs2_robotic_tools</depend>
    <depend>ocs2_pinocchio_interface</depend>
    <depend>ocs2_centroidal_model</depend>
    <!-- <depend>ocs2_robotic_assets</depend> -->
    <depend>ocs2_msgs</depend>
    <depend>ocs2_ros_interfaces</depend>
    <depend>qpoases_catkin</depend>
    <export>

    </export>
</package>
