<?xml version="1.0"?>
<package format="2">
  <name>humanoid_interface</name>
  <version>0.0.1</version>
  <description>The humanoid_interface package</description>

  <maintainer email="xuejl2001@mail.ustc.edu.cn">Jialong Xue</maintainer>

  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rosgraph_msgs</depend>
  <depend>nodelet</depend>
  <depend>roslib</depend>
  <depend>ocs2_core</depend>
  <depend>ocs2_oc</depend>
  <depend>ocs2_ddp</depend>
  <depend>ocs2_mpc</depend>
  <depend>ocs2_sqp</depend>
  <depend>ocs2_ipm</depend>
  <depend>ocs2_msgs</depend>
  <depend>humanoid_interface_drake</depend>
  <!-- <depend>ocs2_robotic_assets</depend> -->
  <depend>ocs2_robotic_tools</depend>
  <depend>ocs2_pinocchio_interface</depend>
  <depend>ocs2_centroidal_model</depend>
  <depend>ocs2_self_collision</depend>
  <depend>ocs2_ros_interfaces</depend>
  <depend>pinocchio</depend>
  <depend>kuavo_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>message_generation</depend>
  <export>
        <nodelet plugin="${prefix}/plugins/nodelet_rosbag.xml" />
        <nodelet plugin="${prefix}/plugins/nodelet_rosbag_player.xml" />
  </export>
</package>
